# HEAPO-Predict

./: .gitignore  README.md  models_results.txt  prj-struc.txt  pyproject.toml  requirements.txt
config/: params.yaml
data/raw/: README.txt
outputs/figures/: phase10_dt_tree.dot
outputs/models/: baseline_hdd_linear.pkl  baseline_hh_means.parquet  best_params.json  imputation_registry.json  model_ann.pkl  model_ann_meta.json  model_ann_tuned.pkl  model_ann_tuned_meta.json  model_dt.pkl  model_dt_tuned.pkl  model_elasticnet.pkl  model_elasticnet_tuned.pkl  model_lasso.pkl  model_lgbm.pkl  model_lgbm.txt  model_ols.pkl  model_ridge.pkl  model_ridge_B.pkl  model_xgboost.json  model_xgboost.pkl  model_xgboost_B.json  model_xgboost_B.pkl  scaler_linear_A.pkl  scaler_linear_A_meta.json  scaler_linear_B.pkl  scaler_linear_B_meta.json
outputs/report/: HEAPO_Predict_Report.md
outputs/tables/: phase10_feature_ranking_table.csv  phase10_feature_ranking_table_b.csv  phase10_interpretability_report.txt  phase10_permutation_importance.csv  (+33 more)
scripts/: 00_smoke_test.py  01_data_loading.py  02_data_cleaning.py  03_data_merging.py  04_feature_engineering.py  05_eda.py  06_data_preparation.py  07_model_training.py  08_hyperparameter_tuning.py  08b_refit_models.py  09_evaluation.py  10_interpretability.py  11_subgroup_analysis.py  12_generate_report.py  13_final_checks.py
src/: ann.py  data_cleaner.py  data_loader.py  data_merger.py  data_preparation.py  eda.py  evaluation.py  feature_engineer.py  interpretability.py  models.py  preprocessing.py  subgroup_analysis.py
(+3 files in other folders)
