[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "heapo-predict"
version = "0.1.0"
description = "ML pipeline for predicting daily heat pump electricity consumption from HEAPO dataset"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "heapo*"]
